--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Aurelia</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
+    <link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
