--- a/src/app.html
+++ b/src/app.html
@@ -2,4 +2,7 @@
   <require from="bootstrap/css/bootstrap.min.css"></require>
   <h1 click.trigger="selLocale()">${message}</h1>
   <h2 t="home"></h2>
+
+  <div id='map'></div>
+
 </template>
