map access moved to component

--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,5 @@
 <template>
   <require from="bootstrap/css/bootstrap.min.css"></require>
-  <h1 click.trigger="selLocale()">${message}</h1>
-  <h2 t="home"></h2>
 
-  <div id='map'></div>
-
+  <router-view></router-view>
 </template>
