--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,8 @@
 <template>
   <require from="bootstrap/css/bootstrap.min.css"></require>
+  <require from="elements/navBar"></require>
+
+<nav-bar router.bind="router"></nav-bar>
 
   <router-view></router-view>
 </template>
