--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Aurelia</title>
+    <title>Литературная карта</title>
+    <link rel="icon"  type="image/png"  href="content/logo1.png">
     <link rel="stylesheet" href="styles/styles.css">
     <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
