--- a/src/elements/navBar.html
+++ b/src/elements/navBar.html
@@ -8,8 +8,8 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">
-          <i class="fa fa-home"></i>
-          <span>${router.title}</span>
+          <img alt="Brand" src="./content/logo1.png" class="logo">
+          <!-- <span>${router.title}</span> -->
         </a>
       </div>
 
