ru file updated

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
   </head>
 
   <body aurelia-app="main">
+
+    <img src="content/logo2.png"  class="loading"/>
+
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
-    <script>
+    <!-- <script>
       SystemJS.import('aurelia-bootstrapper');
-    </script>
+    </script> -->
   </body>
 </html>
