loading element added

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
-    <!-- <script>
+    <script>
       SystemJS.import('aurelia-bootstrapper');
-    </script> -->
+    </script>
   </body>
 </html>
