--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Литературная карта</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="icon"  type="image/png"  href="content/logo1.png">
     <link rel="stylesheet" href="styles/styles.css">
     <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
