--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <title>Литературная карта</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content=" initial-scale=1,maximum-scale=1,user-scalable=0">
     <meta name="description" content="Литературная карта города Тюмень">
     <meta name="author" content="Sergey Sedelnikov">
 
 
     <meta property="og:title" content="Литературная карта">
-    <meta property="og:image" content="content/logo2.png">
+    <meta property="og:image" content="/content/logo2.png">
     <meta property="og:description" content="Литературная карта города Тюмень">
 
     <link rel="icon"  type="image/png"  href="content/logo1.png">
