--- a/index.html
+++ b/index.html
@@ -15,18 +15,24 @@
     <link rel="icon"  type="image/png"  href="content/logo1.png">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="jspm_packages/github/thomaspark/bootswatch@3.3.6/paper/bootstrap.min.css">
-    <link  rel='stylesheet' href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css'/>
+
+    <link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
+
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
+    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
+
   </head>
 
   <body aurelia-app="main">
 
 
-    <div class="spinner"></div>
+    <div class="spinner yellow"></div>
 
-    <blockquote style="width: 60%; margin-left: auto; margin-right: auto">
+    <blockquote style="width: 500px; margin-left: auto; margin-right: auto">
       Сентябрьский солнечный день,</br>
       Собор над ленивой рекою,</br>
       И мост из Тюмени в Тюмень,</br>
@@ -35,7 +41,6 @@
     <div class="text-right" style="width: 60%; margin-left: auto; margin-right: auto">
       <author >Ольга ДАНИЛОВА-ПУШКАРЬ, г. Тюмень</author>
     </div>
-
 
 
 
