some other styling

--- a/index.html
+++ b/index.html
@@ -30,17 +30,18 @@
 
   <body aurelia-app="main">
 
+    <div class="section" style="width: 40%; height: calc(100vh-10px); margin-left: auto; margin-right: auto; margin-top: 10%">
+        <div class="spinner yellow"></div>
 
-    <div class="spinner yellow"></div>
-
-    <blockquote style="width: 500px; margin-left: auto; margin-right: auto">
-      Сентябрьский солнечный день,</br>
-      Собор над ленивой рекою,</br>
-      И мост из Тюмени в Тюмень,</br>
-      И бронзовый лист под ногою.</br>
-    </blockquote>
-    <div class="text-right" style="width: 500px; margin-left: auto; margin-right: auto">
-      <author >Ольга ДАНИЛОВА-ПУШКАРЬ, г. Тюмень</author>
+      <blockquote>
+        Сентябрьский солнечный день,</br>
+        Собор над ленивой рекою,</br>
+        И мост из Тюмени в Тюмень,</br>
+        И бронзовый лист под ногою.</br>
+      </blockquote>
+      <div class="text-right">
+        <author >Ольга ДАНИЛОВА-ПУШКАРЬ, г. Тюмень</author>
+      </div>
     </div>
 
 
