distance displayed well

--- a/src/elements/closeInfo.html
+++ b/src/elements/closeInfo.html
@@ -2,7 +2,7 @@
   <div style="display: ${distance | distanceToVisibility}">
 
     <div class="close-info">
-      <span class="label label-default">${distance | toDistanceView}/span>
+      <span class="label label-default">${distance | toDistanceView}</span>
 
       <div innerHTML.bind="html"></div>
 
