--- a/src/elements/closeInfo.html
+++ b/src/elements/closeInfo.html
@@ -1,5 +1,5 @@
 <template>
-  <div style="display: ${distance | distanceToVisibility}">
+  <div>
 
     <div class="close-info">
       <span class="label label-default">${distance | toDistanceView}</span>
@@ -10,6 +10,7 @@
         <a href="/#/${data.data}" class="btn bnt-default" t="map.marker.readMore"></a>
       </div>
     </div>
+
     <hr/>
 
   </div>
