--- a/src/elements/closeInfo.html
+++ b/src/elements/closeInfo.html
@@ -7,7 +7,7 @@
       <div innerHTML.bind="html"></div>
 
       <div class="text-right">
-        <a href="/#/${data.data}" class="btn bnt-default" t="map.marker.readMore"></a>
+        <a href="/#/${data.data}" class="btn btn-default" t="map.marker.readMore"></a>
       </div>
     </div>
 
