--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
 
     <script src='https://cdn.jsdelivr.net/remarkable/1.6.2/remarkable.min.js'></script>
+    <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
   </head>
 
   <body aurelia-app="main">
