--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
 
-    <script src='https://cdn.jsdelivr.net/remarkable/1.6.2/remarkable.min.js'></script>
-    <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
+    <!-- <script src='https://cdn.jsdelivr.net/remarkable/1.6.2/remarkable.min.js'></script> -->
   </head>
 
   <body aurelia-app="main">
