--- a/index.html
+++ b/index.html
@@ -13,19 +13,15 @@
     <meta property="og:description" content="Литературная карта города Тюмень">
 
     <link rel="icon"  type="image/png"  href="content/logo1.png">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="jspm_packages/github/thomaspark/bootswatch@3.3.6/paper/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/dist/site.css">
 
     <link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
-    <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
-
-    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
 
-    <!-- <script src='https://cdn.jsdelivr.net/remarkable/1.6.2/remarkable.min.js'></script> -->
+    <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
   </head>
 
   <body aurelia-app="main">
