--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="section" style="width: 40%; height: calc(100vh-10px); margin-left: auto; margin-right: auto; margin-top: 10%">
         <div class="spinner yellow"></div>
 
-      <blockquote>
+      <!-- <blockquote>
         Сентябрьский солнечный день,</br>
         Собор над ленивой рекою,</br>
         И мост из Тюмени в Тюмень,</br>
@@ -37,10 +37,8 @@
       </blockquote>
       <div class="text-right">
         <author >Ольга ДАНИЛОВА-ПУШКАРЬ, г. Тюмень</author>
-      </div>
+      </div> -->
     </div>
-
-
 
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
