styles and index page

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
 
         <div class="text-center">
-          <h3>Литературная карта</h3>
-          <h5>города Тюмень</h5>
+          <h1>Литературная карта</h1>
+          <h2>города Тюмень</h2>
         </div>
 
           <!-- <div class="spinner yellow"></div> -->
@@ -62,7 +62,7 @@
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
-      //  SystemJS.import('aurelia-bootstrapper');
+       SystemJS.import('aurelia-bootstrapper');
     </script>
   </body>
 </html>
