--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
-            <img alt="Brand" src="./content/logo2-bw.png" class="logo">
+            <img alt="Brand" src="./content/logo2.png" class="logo">
           </a>
         </div>
 
@@ -54,8 +54,14 @@
           <h1>Литературная карта</h1>
           <h2>города Тюмень</h2>
         </div>
+      </div>
 
-          <!-- <div class="spinner yellow"></div> -->
+      <div class="spinner yellow">
+          <div class="rect1"></div>
+          <div class="rect2"></div>
+          <div class="rect3"></div>
+          <div class="rect4"></div>
+          <div class="rect5"></div>
       </div>
     </div>
 
