--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
           <h1>Литературная карта</h1>
           <h2>города Тюмень</h2>
         </div>
+
+        <div class="text-right">
+          <div class="thumb-small" >
+            <img src="content/coat_of_arms.png" style="margin-top: -22px;"/>
+          </div>
+          <div class="thumb-small" >
+            <img src="content/flag.png" style="margin-top: -17px; width: 50px; margin-left: -25px;"/>
+          </div>
+        </div>
       </div>
 
       <div class="spinner yellow">
