--- a/index.html
+++ b/index.html
@@ -42,29 +42,18 @@
         </div>
       </nav>
 
-    <div class="container page-content">
+    <div class="section no-shadow index-top bg-books page-content">
+      <!-- <div class="text-center">
+        <div class="logo-container"><img class="logo-index" src="content/logo3.png"/></div>
+      </div> -->
 
-      <div class="section index-top bg-books">
-        <div class="text-center">
-          <div class="logo-container"><img class="logo-index" src="content/logo3.png"/></div>
-
-        </div>
-
-        <div class="text-center">
-          <h1>Литературная карта</h1>
-          <h2>города Тюмень</h2>
-        </div>
-
-        <div class="text-right">
-          <div class="thumb-small" >
-            <img src="content/coat_of_arms.png" style="margin-top: -22px;"/>
-          </div>
-          <div class="thumb-small" >
-            <img src="content/flag.png" style="margin-top: -17px; width: 50px; margin-left: -25px;"/>
-          </div>
-        </div>
+      <div class="text-center">
+        <h1>Литературная карта</h1>
+        <h2>города Тюмень</h2>
       </div>
+    </div>
 
+    <div class="container">
       <div class="spinner yellow">
           <div class="rect1"></div>
           <div class="rect2"></div>
