--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
        (function() {
                 var mc = document.createElement('script');
                 mc.type = 'text/javascript';
-                mc.async = false;
+                mc.async = true;
                 mc.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cackle.me/widget.js';
                 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mc, s.nextSibling);
               })();
