--- a/src/elements/closeInfo.html
+++ b/src/elements/closeInfo.html
@@ -4,10 +4,7 @@
     <div class="close-info">
 
       <!--distance if needed-->
-      <span if.bind="data.distance" class="label label-default">${data.distance | toDistanceView}</span>
-
-      <!--raiting if needed-->
-      <div if.bind="rating" id="ratingContainer${data.data}"></div>
+      <span if.bind="showDistance" class="label label-default"><i class="fa fa-map-marker"></i>&nbsp;${data.distance | toDistanceView}</span>
 
       <div innerHTML.bind="html"></div>
       <div class="text-right">
