--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,6 @@
 <template>
   <require from="elements/navBar"></require>
+  <require from="elements/footer"></require>
 
 <nav-bar router.bind="router"></nav-bar>
 
