--- a/src/elements/closeInfo.html
+++ b/src/elements/closeInfo.html
@@ -6,7 +6,18 @@
       <!--distance if needed-->
       <span if.bind="showDistance" class="label label-default"><i class="fa fa-map-marker"></i>&nbsp;${data.distance | toDistanceView}</span>
 
-      <div innerHTML.bind="html"></div>
+      <div if.bind="html" innerHTML.bind="html">
+
+      </div>
+
+      <div if.bind="!html" class="spinner yellow">
+          <div class="rect1"></div>
+          <div class="rect2"></div>
+          <div class="rect3"></div>
+          <div class="rect4"></div>
+          <div class="rect5"></div>
+      </div>
+
       <div class="text-right">
         <a href="/#/${data.data}" class="btn btn-default" t="map.marker.readMore"></a>
       </div>
