--- a/src/elements/adminMarkerInfo.html
+++ b/src/elements/adminMarkerInfo.html
@@ -1,5 +1,5 @@
 <template>
-  <div class="section section-fixed section-fixed-height">
+  <div class="section section-fixed section-fixed-height float" style="margin-left: 3px; margin-right: 3px;">
     Hello World!
   </div>
 <template>
