--- a/src/elements/adminMarkerInfo.html
+++ b/src/elements/adminMarkerInfo.html
@@ -1,5 +1,27 @@
 <template>
-  <div class="section section-fixed section-fixed-height float" style="margin-left: 3px; margin-right: 3px;">
-    Hello World!
+  <div class="section section-fixed float" style="margin-left: 8px; margin-right: 8px; min-height: 300px;">
+
+    <div class="mini-map" id="mini-map-${index}" ref="miniMap"></div>
+
+    <div if.bind="data" innerHTML.bind="data"></div>
+
+    <div if.bind="!data" class="spinner yellow" style="margin-top: 30px;">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
+    </div>
+
+    <div class="text-right">
+      <a href="JavaScript:void(0);" click.delegate="editMarker()" class="btn btn-default">
+        <i class="fa fa-gear"></i>&nbsp;<span t="admin.item.edit"></span>
+      </a>
+
+      <a href="/#/${item.data}" target="_blank" class="btn btn-default">
+        <i class="fa fa-eye"></i>&nbsp;<span t="admin.item.preview"></span>
+      </a>
+    </div>
+
   </div>
 <template>
