file type filter for md files only

--- a/src/elements/markerEditModal.html
+++ b/src/elements/markerEditModal.html
@@ -40,12 +40,12 @@
 
             <div class="col-md-6">
                 <label t="admin.edit.thumb" for="thumb"></label>
-                <input type="file" id="thumb" files.bind="thumbFileName" class="form-control"/>
+                <input type="file" id="thumb" accept=".md" files.bind="thumbFileName" class="form-control"/>
             </div>
 
             <div class="col-md-6">
               <label t="admin.edit.full" for="full"></label>
-              <input type="file" id="full" files.bind="fullFileName" class="form-control"/>
+              <input type="file" id="full" accept=".md" files.bind="fullFileName" class="form-control"/>
             </div>
 
           </div>
