--- a/src/elements/closeInfo.html
+++ b/src/elements/closeInfo.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="text-right">
-        <a href="/#/${data.data}" class="btn btn-default" t="map.marker.readMore"></a>
+        <a href="#/${data.data}" class="btn btn-default" t="map.marker.readMore"></a>
       </div>
     </div>
 
