--- a/src/elements/markerEditModal.html
+++ b/src/elements/markerEditModal.html
@@ -40,12 +40,12 @@
 
             <div class="col-md-6">
                 <label t="admin.edit.thumb" for="thumb"></label>
-                <input type="file" id="thumb" accept=".md" files.bind="thumbFile" class="form-control"/>
+                <input type="file" name="thumbFile" id="thumb" accept=".md" files.bind="thumbFile" class="form-control"/>
             </div>
 
             <div class="col-md-6">
               <label t="admin.edit.full" for="full"></label>
-              <input type="file" id="full" accept=".md" files.bind="fullFile" class="form-control"/>
+              <input type="file" name="fullFile" id="full" accept=".md" files.bind="fullFile" class="form-control"/>
             </div>
 
           </div>
