style of admin page

--- a/src/elements/adminMarkerInfo.html
+++ b/src/elements/adminMarkerInfo.html
@@ -3,7 +3,7 @@
 
     <div class="mini-map" id="mini-map-${index}" ref="miniMap"></div>
 
-    <div if.bind="data" innerHTML.bind="data"></div>
+    <div if.bind="data" innerHTML.bind="data" class="text-left"></div>
 
     <div if.bind="!data" class="spinner yellow" style="margin-top: 30px;">
         <div class="rect1"></div>
