--- a/src/elements/markerEditModal.html
+++ b/src/elements/markerEditModal.html
@@ -52,8 +52,9 @@
 
         </div>
         <div class="modal-footer">
+          <button type="button" class="btn danger btn-link" data-dismiss="modal"><i class="fa fa-trash-o"></i></button>
           <button type="button" class="btn btn-default" data-dismiss="modal" t="admin.edit.cancel"></button>
-          <button type="button" class="btn btn-primary" t="admin.edit.save" click.delegate="save()"></button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal" t="admin.edit.save" click.delegate="save()"></button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
