--- a/src/elements/markerEditModal.html
+++ b/src/elements/markerEditModal.html
@@ -52,7 +52,7 @@
 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn danger float btn-link" data-dismiss="modal"><i class="fa fa-trash-o"></i></button>
+          <button type="button" class="btn danger float btn-link" data-dismiss="modal" click.delegate="delete()"><i class="fa fa-trash-o"></i></button>
           <button type="button" class="btn btn-default" data-dismiss="modal" t="admin.edit.cancel"></button>
           <button type="button" class="btn btn-primary" data-dismiss="modal" t="admin.edit.apply" click.delegate="save()"></button>
         </div>
