--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
+    <script src="//vk.com/js/api/openapi.js" type="text/javascript"></script
   </head>
 
   <body aurelia-app="main">
