more icon explanations

--- a/src/elements/markerEditModal.html
+++ b/src/elements/markerEditModal.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="col-md-6">
-                <label t="admin.edit.image" for="imageMarker"></label>
+                <label t="admin.edit.image" for="imageMarker"></label> <a t="admin.edit.images" href="https://www.mapbox.com/maki-icons/" target="blank"></a>
                 <input type="text" id="imageMarker" change.bind="markerChanged()" value.two-way="item.marker & updateTrigger:'blur'" class="form-control"/>
             </div>
 
