--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <div class="text-center">
         <h1>Литературная карта</h1>
-        <h2>города Тюмень</h2>
+        <h2>города Тюмени</h2>
       </div>
     </div>
 
