--- a/src/elements/navBar.html
+++ b/src/elements/navBar.html
@@ -15,7 +15,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
-            <a href.bind="row.href">${row.title}</a>
+            <a href.bind="row.href" target.bind="row.settings.target">${row.title}</a>
           </li>
         </ul>
 
